Larch History
================================================================================

Version 1.1.0 (git)
  * Mailbox and message state information is now stored in a local SQLite
    database, which allows Larch to resync and resume interrupted syncs much
    more quickly without having to rescan all messages. As a result, SQLite 3 is
    now a dependency.
  * Progress information is now displayed regularly while scanning large
    mailboxes.

Version 1.0.2 (2009-08-05)
  * Fixed a bug that caused Larch to try to set the read-only \Recent flag on
    the destination server.

Version 1.0.1 (2009-05-10)
  * Ruby 1.9.1 support.
  * Much more robust handling of unexpected server disconnects and dropped
    connections.
  * Added --all option to copy all folders recursively.
  * Added --all-subscribed option to copy all subscribed folders recursively.
  * Added --dry-run option to simulate changes without actually making them.
  * Added --exclude and --exclude-file options to specify folders that should
    not be copied.
  * Added --ssl-certs option to specify a bundle of trusted SSL certificates.
  * Added --ssl-verify option to verify server SSL certificates.
  * Added a new "insane" logging level, which will output all IMAP commands and
    responses to STDERR.
  * Fixed excessive post-scan processing times for very large mailboxes.
  * Fixed potential scan problems with very large mailboxes on certain servers.
  * POSIX signals are no longer trapped on platforms that aren't likely to
    support them.

Version 1.0.0 (2009-03-17)
  * First release.